@@ -19,6 +19,7 @@
 - Display count items when pagination is disabled
 - Check security in column groups in forms
 - Add refresh_link option to :select form_ui
+- Sort association options in select :form_ui using column.sort_by :sql
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
